[gd_scene load_steps=6 format=3 uid="uid://bc2kl4vht8olt"]

[ext_resource type="Theme" uid="uid://bxvebmn23os06" path="res://themes/main_theme.tres" id="1_wm6fx"]
[ext_resource type="Script" path="res://scripts/code_assistant/code_assistant.gd" id="2_2y50c"]
[ext_resource type="Script" path="res://scripts/home_button.gd" id="3_4kkrw"]
[ext_resource type="Texture2D" uid="uid://p73un2ksmoxy" path="res://images/icons/nil_status.png" id="4_yc7b8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fr2rx"]
bg_color = Color(0.207843, 0.211765, 0.258824, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.207843, 0.211765, 0.258824, 1)

[node name="code_assistant" type="PanelContainer"]
self_modulate = Color(0.14902, 0.152941, 0.188235, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wm6fx")
script = ExtResource("2_2y50c")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="hcon" type="HBoxContainer" parent="vbox"]
layout_mode = 2

[node name="home_button" type="Button" parent="vbox/hcon"]
layout_mode = 2
size_flags_vertical = 4
text = "Home"
script = ExtResource("3_4kkrw")

[node name="Label2" type="Label" parent="vbox/hcon"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "    Code Assistant"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="vbox/hcon"]
layout_mode = 2

[node name="Label3" type="Label" parent="vbox/hcon"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Code Assistant will attempt to fix your code and provide useful comments to better document your code.To translate code to a different language, specify a the language for the output code."
vertical_alignment = 1
autowrap_mode = 3

[node name="generate_button" type="Button" parent="vbox/hcon"]
layout_mode = 2
size_flags_vertical = 4
text = "Generate"

[node name="loading" type="TextureRect" parent="vbox/hcon"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_yc7b8")
expand_mode = 2

[node name="hsplit" type="HSplitContainer" parent="vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="vbox" type="VBoxContainer" parent="vbox/hsplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hbox" type="HBoxContainer" parent="vbox/hsplit/vbox"]
layout_mode = 2

[node name="Label" type="Label" parent="vbox/hsplit/vbox/hbox"]
layout_mode = 2
text = "Input Code"
vertical_alignment = 1

[node name="input_code_type" type="OptionButton" parent="vbox/hsplit/vbox/hbox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="text_input" type="CodeEdit" parent="vbox/hsplit/vbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Enter your text here. You can also drag script files here."
drag_and_drop_selection_enabled = false
wrap_mode = 1
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
draw_spaces = true
gutters_draw_line_numbers = true

[node name="highlighter" type="Node" parent="vbox/hsplit/vbox/text_input"]

[node name="vbox2" type="VBoxContainer" parent="vbox/hsplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hbox" type="HBoxContainer" parent="vbox/hsplit/vbox2"]
layout_mode = 2

[node name="Label" type="Label" parent="vbox/hsplit/vbox2/hbox"]
layout_mode = 2
text = "Output Code"
vertical_alignment = 1

[node name="output_code_type" type="OptionButton" parent="vbox/hsplit/vbox2/hbox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="copy_output_button" type="Button" parent="vbox/hsplit/vbox2/hbox"]
layout_mode = 2
text = "Copy"

[node name="text_display" type="CodeEdit" parent="vbox/hsplit/vbox2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fr2rx")
text = "test"
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
draw_tabs = true
draw_spaces = true
gutters_draw_line_numbers = true

[node name="highlighter" type="Node" parent="vbox/hsplit/vbox2/text_display"]
